--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
 v0.1, 18-August-2013 -- Initial release.
 v0.2, 10-November-2013 -- Add support for state files across sessions.
+v0.3, 12-December-2013 -- Add support for notes using the RSS feed.
